@startuml

title __AGGREGATEOPERATORS's Class Diagram__\n

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace aggregateOperators {
      abstract class gr.ds.unipi.noda.api.redisearch.aggregateOperators.AggregateOperator {
          + getOperatorExpression()
          {abstract} # getOperatorField()
          ~ AggregateOperator()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace aggregateOperators {
      class gr.ds.unipi.noda.api.redisearch.aggregateOperators.OperatorAvg {
          # getOperatorField()
          {static} ~ newOperatorAvg()
          - OperatorAvg()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace aggregateOperators {
      class gr.ds.unipi.noda.api.redisearch.aggregateOperators.OperatorCount {
          # getOperatorField()
          {static} ~ newOperatorCount()
          - OperatorCount()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace aggregateOperators {
      class gr.ds.unipi.noda.api.redisearch.aggregateOperators.OperatorCountDistinct {
          # getOperatorField()
          {static} ~ newOperatorCount()
          - OperatorCountDistinct()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace aggregateOperators {
      class gr.ds.unipi.noda.api.redisearch.aggregateOperators.OperatorMax {
          # getOperatorField()
          {static} ~ newOperatorMax()
          - OperatorMax()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace aggregateOperators {
      class gr.ds.unipi.noda.api.redisearch.aggregateOperators.OperatorMin {
          # getOperatorField()
          {static} ~ newOperatorMin()
          - OperatorMin()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace aggregateOperators {
      class gr.ds.unipi.noda.api.redisearch.aggregateOperators.OperatorSum {
          # getOperatorField()
          {static} ~ newOperatorSum()
          - OperatorSum()
      }
    }
  }
  

  namespace gr.ds.unipi.noda.api.redisearch {
    namespace aggregateOperators {
      class gr.ds.unipi.noda.api.redisearch.aggregateOperators.RediSearchAggregateOperatorFactory {
          + newOperatorAvg()
          + newOperatorCount()
          + newOperatorCountDistinct()
          + newOperatorCountNonNull()
          + newOperatorMax()
          + newOperatorMin()
          + newOperatorSum()
      }
    }
  }
  

  gr.ds.unipi.noda.api.redisearch.aggregateOperators.AggregateOperator -up-|> gr.ds.unipi.noda.api.core.operators.aggregateOperators.AggregateOperator
  gr.ds.unipi.noda.api.redisearch.aggregateOperators.OperatorAvg -up-|> gr.ds.unipi.noda.api.redisearch.aggregateOperators.AggregateOperator
  gr.ds.unipi.noda.api.redisearch.aggregateOperators.OperatorCount -up-|> gr.ds.unipi.noda.api.redisearch.aggregateOperators.AggregateOperator
  gr.ds.unipi.noda.api.redisearch.aggregateOperators.OperatorCountDistinct -up-|> gr.ds.unipi.noda.api.redisearch.aggregateOperators.AggregateOperator
  gr.ds.unipi.noda.api.redisearch.aggregateOperators.OperatorMax -up-|> gr.ds.unipi.noda.api.redisearch.aggregateOperators.AggregateOperator
  gr.ds.unipi.noda.api.redisearch.aggregateOperators.OperatorMin -up-|> gr.ds.unipi.noda.api.redisearch.aggregateOperators.AggregateOperator
  gr.ds.unipi.noda.api.redisearch.aggregateOperators.OperatorSum -up-|> gr.ds.unipi.noda.api.redisearch.aggregateOperators.AggregateOperator
  gr.ds.unipi.noda.api.redisearch.aggregateOperators.RediSearchAggregateOperatorFactory -up-|> gr.ds.unipi.noda.api.core.operators.aggregateOperators.BaseAggregateOperatorFactory


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
